# sample-gh-copilot-sdk

./: .gitattributes  .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
sample_gh_copilot_sdk/: __init__.py  _base_session.py  _chat_loop.py  logging.ini
sample_gh_copilot_sdk/agent_plugins/: __init__.py  __main__.py  agents.py  hooks.py  session.py  tools.py
sample_gh_copilot_sdk/agent_plugins/plugins/code_reviewer/: plugin.json
sample_gh_copilot_sdk/agent_plugins/plugins/code_reviewer/agents/: code-reviewer.md
sample_gh_copilot_sdk/code_reviewer/: __init__.py  __main__.py  agent.py  hooks.py  session.py  tools.py
tests/: __init__.py
tests/agent_plugins/: __init__.py  test_agents.py  test_hooks.py  test_session.py  test_tools.py
tests/code_reviewer/: __init__.py  test_agent.py  test_hooks.py  test_session.py  test_tools.py
